--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,3 +1,8 @@
+JavaScript: false
+Ruby: false
+Python: false
+PHP: true
+
 exclude_paths:
 - database/**/*
 - src/Spiritix/LadaCache/Database/Connection/**/*
