--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,9 +1,26 @@
-JavaScript: false
-Ruby: false
-Python: false
-PHP: true
-
+---
+engines:
+  duplication:
+    enabled: true
+    config:
+      languages:
+      - ruby
+      - javascript
+      - python
+      - php
+  fixme:
+    enabled: true
+  phpmd:
+    enabled: true
+ratings:
+  paths:
+  - "**.inc"
+  - "**.js"
+  - "**.jsx"
+  - "**.module"
+  - "**.php"
+  - "**.py"
+  - "**.rb"
 exclude_paths:
-- database/**/*
-- src/Spiritix/LadaCache/Database/Connection/**/*
-- tests/**/*
+- config/
+- tests/
