--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -24,5 +24,5 @@ ratings:
 exclude_paths:
 - config/
 - database/
-- src/Spiritix/LadaCache/Database/Connection/**/*
+- src/Spiritix/LadaCache/Database/Connection/
 - tests/
